Modernize deprecated new URL(String) usages (step 3: preserve throws contract)
Replace new URL(String) with URI.create(String).toURL() at sites where
the checked MalformedURLException previously propagated via a throws
clause with no local catch. Each site now wraps the call in a small
try/catch that translates URI.create's unchecked IllegalArgumentException
back into a checked MalformedURLException, so the method's declared
exception contract and callers' behavior stay unchanged.

AI-generated